# Entropia

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  COPYING.md  COPYING.txt  PREREQUISITE.md  README.md  SETUP.md  cpp.hint  index.html
application/: CMakeLists.txt
application/src/: config.h  config.h.in  logging.h  main.cpp  main.h  vars.h
boost/: CMakeLists.txt
client/: CMakeLists.txt
client/include/client/: main.hpp
client/include/public/unnamed/client/: main.hpp
client/src/: main.cpp  main.h
client/src/utilities/: io.cpp
cmake/: CompileDefinitions.cmake  dependencies.cmake  gitmodules.cmake  glew.cmake  options.cmake  packaging.cmake  patches.cmake  utilities.cmake  variables.cmake
cmake/ExternalProject_Build/: CMakeLists.txt  invoke.cmake
cmake/modules/: BuildGLEW.cmake  BuildGLFW.cmake  BuildGLM.cmake  Buildspdlog.cmake  FindGLES2.cmake
core/: CMakeLists.txt
core/include/: config.h.in
core/include/core/: config.h.in  graphics.h  graphics.hpp
core/include/core/utilities/: id.h  io.h  io.hpp  logging.hpp  singletons.h
core/include/public/unnamed/core/game/: objects.hpp
core/include/public/unnamed/core/utilities/: graphics.hpp  id.h  io.hpp  logging.hpp  singletons.h
core/include/unnamed/core/: graphics.hpp
core/include/unnamed/core/game/: objects.hpp
core/src/: config.h.in  files.cpp  files.h  graphics.cpp  graphics.h  logging.cpp  logging.h
core/src/game/: objects.cpp
core/src/utilities/: graphics.cpp  id.cpp  io.cpp  logging.cpp  logging.h  singletons.h  typedefs.h  types.h
cpack/: description.txt
include/private/: config.h.in
lib/: .gitkeep
server/: CMakeLists.txt
server/include/public/unnamed/server/: main.hpp
server/include/server/: main.hpp
server/src/: main.cpp  main.h
server/src/utilities/: io.cpp
